fixed header spacing issue

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,9 @@
 header {
-    padding: 15% 1%;
+    padding: 1% 1%;
     text-align: left;
+}
+
+h1 {
+    margin-top: 15%;
+    margin-bottom: 0;
 }
